--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 ﻿<html>
  <head>
+	<title>GIT 수업</title>
  </head>
 
  <body>
 <header>
-헤더추가
+	<h1>헤더추가</h1>
 </header>
+<ul>
+</ul>
 
 
-<h1>헤더추가</h1>
+
+
+
  </body>
 </html>
