master javascript 추가

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 ﻿<html>
  <head>
 	<title>GIT 수업</title>
+	<script type="text/javascript">
+	<!--
+		alert("master 추가");
+	//-->
+	</script>
  </head>
 
  <body>
